<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MidiSetupClass</class>
 <widget class="QDialog" name="MidiSetupClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>420</width>
    <height>186</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>420</width>
    <height>0</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>MIDI Setup</string>
  </property>
  <property name="windowIcon">
   <iconset resource="qtMidiTest.qrc">
    <normaloff>:/app/content/midi_icon.png</normaloff>:/app/content/midi_icon.png</iconset>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" colspan="2">
    <widget class="QCheckBox" name="chkEnableInput">
     <property name="whatsThis">
      <string>Check this box to enable MIDI input for the program. In Linux and Mac OSX the input port is always enabled and can't be un-ckecked</string>
     </property>
     <property name="text">
      <string>Enable MIDI input</string>
     </property>
     <property name="checked">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="0" column="2" rowspan="3">
    <widget class="AspectRatioPixmapLabel" name="label">
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
      <pixmap resource="qtMidiTest.qrc">:/app/content/midi_icon.png</pixmap>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
   </item>
   <item row="1" column="0" colspan="2">
    <widget class="QCheckBox" name="chkEnableThru">
     <property name="whatsThis">
      <string>Check this box to enable the MIDI Thru function: any MIDI event received in the input port will be copied unchanged to the output port</string>
     </property>
     <property name="text">
      <string>Enable MIDI Thru on MIDI Output</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0" colspan="2">
    <widget class="QCheckBox" name="chkOmni">
     <property name="text">
      <string>MIDI Omni mode</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="labelInput">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>Input MIDI Connection</string>
     </property>
     <property name="buddy">
      <cstring>comboInput</cstring>
     </property>
    </widget>
   </item>
   <item row="3" column="1" colspan="2">
    <widget class="QComboBox" name="comboInput">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>180</width>
       <height>0</height>
      </size>
     </property>
     <property name="whatsThis">
      <string>Use this control to change the connection for the MIDI input port, if it is enabled</string>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="labelOutput">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="text">
      <string>Output MIDI Connection</string>
     </property>
     <property name="buddy">
      <cstring>comboOutput</cstring>
     </property>
    </widget>
   </item>
   <item row="4" column="1" colspan="2">
    <widget class="QComboBox" name="comboOutput">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>180</width>
       <height>0</height>
      </size>
     </property>
     <property name="whatsThis">
      <string>Use this control to change the connection for the MIDI output port</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0" colspan="3">
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>AspectRatioPixmapLabel</class>
   <extends>QLabel</extends>
   <header>aspectratiopixmaplabel.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>chkEnableInput</tabstop>
  <tabstop>chkEnableThru</tabstop>
  <tabstop>chkOmni</tabstop>
  <tabstop>comboInput</tabstop>
  <tabstop>comboOutput</tabstop>
  <tabstop>buttonBox</tabstop>
 </tabstops>
 <resources>
  <include location="qtMidiTest.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>MidiSetupClass</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>236</x>
     <y>160</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>141</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>MidiSetupClass</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>304</x>
     <y>160</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>141</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>chkEnableInput</sender>
   <signal>toggled(bool)</signal>
   <receiver>comboInput</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>71</x>
     <y>18</y>
    </hint>
    <hint type="destinationlabel">
     <x>323</x>
     <y>90</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>chkEnableInput</sender>
   <signal>toggled(bool)</signal>
   <receiver>chkEnableThru</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>212</x>
     <y>17</y>
    </hint>
    <hint type="destinationlabel">
     <x>193</x>
     <y>44</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>chkEnableInput</sender>
   <signal>toggled(bool)</signal>
   <receiver>chkOmni</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>259</x>
     <y>19</y>
    </hint>
    <hint type="destinationlabel">
     <x>99</x>
     <y>76</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
